---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2025-04-08
  Info:
    - Remove nonessential essential techs
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2025-04-08
  Info:
    - Added compatability with extraplanetary-production
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2025-03-28
  Info:
    - Internal location changes
    - Add an achevement for visiting Hexalith, the images are unfinished at the moment though\
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2025-03-27
  Info:
    - Move compatibilities that don't relate to this mod into another one
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2025-03-27
  Info:
    - Make Nauvis have biters by default
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2025-03-26
  Info:
    - Fix a typo in worldgen-final-fixes.lua that made the setting hexalith-nuclear-science-peaceful-nauvis never be read
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2025-03-26
  Info:
    - Restructure internals (again)
    - Fix issue with bztitanium and screwing with centrifuge unlock
    - Fix locale
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2025-03-26
  Info:
    - Change the name so that it has that planet icon that all the planet mods have
    - Support lignumis
    - Restructure internals
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2025-03-26
  Info:
    - Add logo