@@ -1,0 +1,4 @@
+local util = require("functions").tech
+
+util.set_prerequisites("uranium-processing", "planet-discovery-hexalith")
+util.disable_tech("uranium-mining")
