@@ -6,3 +6,6 @@ end
 if mods["Legendary_Quality_science_pack_requirements"] then
   require("compatibility.Legendary_Quality_science_pack_requirements.data-updates")
 end
+if mods["SchallUraniumProcessing"] then
+  require("compatibility.SchallUraniumProcessing.data-updates")
+end
