@@ -2,7 +2,8 @@
 Version: 0.1.11
 Date: 2025-04-08
   Info:
-    - Remove nonessential essential techs
+    - Remove nonessential techs from essential list
+    - Compat with SchallUraniumProcessing
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.10
 Date: 2025-04-08
